# hatchchat

./: .gitignore  Cargo.toml  README.md  justfile
docs/superpowers/plans/: 2026-07-20-gui-ply-engine.md
docs/superpowers/specs/: 2026-07-20-gui-ply-engine-design.md
src/: discovery.rs  gui.rs  main.rs  network.rs  peer_cache.rs  tui.rs
tests/: discovery_test.rs  network_test.rs  peer_cache_test.rs
