[package]
name = "hatch-chat"
version = "0.5.0"
edition = "2021"

[dependencies]
libp2p = { version = "0.54", features = [
    "tokio", "tcp", "quic", "dns", "noise", "yamux",
    "kad", "mdns", "gossipsub", "identify", "request-response", "cbor", "macros",
    "autonat", "relay", "dcutr"
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
redb = "2"
ratatui = "0.26"
crossterm = "0.27"