[package]
name = "hatch-chat"
version = "0.6.0"
edition = "2021"
description = "Hearty peer-to-peer chat over libp2p, with a terminal UI (default) and an optional ply-engine desktop GUI."
license = "MIT"
repository = "https://github.com/kerryhatcher/hatchchat"
readme = "README.md"
keywords = ["p2p", "chat", "libp2p", "tui", "gui"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
libp2p = { version = "0.54", features = [
    "tokio", "tcp", "quic", "dns", "noise", "yamux",
    "kad", "mdns", "gossipsub", "identify", "request-response", "cbor", "macros",
    "autonat", "relay", "dcutr"
] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
async-trait = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
redb = "2"
ratatui = "0.26"
crossterm = "0.27"
ply-engine = { version = "1.1.1", optional = true }
macroquad = { package = "macroquad-ply", version = "0.4.14", optional = true }

[features]
default = ["gui"]
gui = ["dep:ply-engine", "dep:macroquad"]
